# docs/swagger.json
@@ -1,17 +1,17 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Documentation",
-        "title": "Golang dealer APP",
+        "description": "Dostonbek Soliyev, Nodirbek No'monov",
+        "title": "Farmish APP",
         "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8080",
     "basePath": "/v1",
     "paths": {
-        "/admin/login": {
+        "/animal/create": {
             "post": {
-                "description": "api for logging  in for admins",
+                "description": "Api for creating animal",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,10 +19,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "admin"
+                    "animal"
                 ],
-                "summary": "Login for admins",
-                "operationId": "admin-login",
+                "summary": "Create Animal",
+                "operationId": "animal-create",
                 "parameters": [
                     {
                         "description": "Admin credentials for logging in",
@@ -30,7 +30,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.LoginRequest"
+                            "$ref": "#/definitions/models.CreateAnimalRequest"
                         }
                     }
                 ],
@@ -38,7 +38,55 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.LoginResponse"
+                            "$ref": "#/definitions/entity.Animal"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    }
+                }
+            }
+        },
+        "/animal/update/{id}": {
+            "put": {
+                "description": "Api for updating animal",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "animal"
+                ],
+                "summary": "Update Animal",
+                "operationId": "animal-update",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Animal ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Admin credentials for logging in",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateAnimalRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Animal"
                         }
                     },
                     "500": {
@@ -52,24 +100,40 @@
         }
     },
     "definitions": {
-        "models.LoginRequest": {
+        "entity.Animal": {
             "type": "object",
             "properties": {
-                "email": {
+                "animal": {
                     "type": "string",
-                    "example": "dealer@gmail.com"
+                    "example": "sheep"
                 },
-                "password": {
-                    "type": "string",
-                    "example": "pass"
+                "id": {
+                    "type": "string"
+                },
+                "is_hungry": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "weight": {
+                    "type": "number",
+                    "example": 56.9
                 }
             }
         },
-        "models.LoginResponse": {
+        "models.CreateAnimalRequest": {
             "type": "object",
             "properties": {
-                "access_token": {
-                    "type": "string"
+                "animal": {
+                    "type": "string",
+                    "example": "sheep"
+                },
+                "is_hungry": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "weight": {
+                    "type": "number",
+                    "example": 56.9
                 }
             }
         },
